# dioxus-web-test

./: .gitignore  .nixd.json  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
src/: main.rs
